# paper-workflows

./: LICENSE  LICENSE.md  README.md
02_workflow_Bodium_OGS/: BodiumOGS6Coupling.py  README.md  config.json  mandict.txt  pyproject.toml
02_workflow_Bodium_OGS/BodiumOGS/: Bodium_Test_Mesh2d_fields.vtu
02_workflow_Bodium_OGS/BodiumOGS/Bodium/: V140Soil.json  config1.json  config3.json  ww_mono.json  ww_mono_high.json
02_workflow_Bodium_OGS/BodiumOGS/Bodium/crops/: all_crops_meta.txt  cassava.json  chickpea.json  cotton.json  cowpea.json  fababean.json  generic_summercorn.json  generic_wintercorn.json  groundnut.json  legume.json  maize.json  millet.json  mungbean.json  persianclover.json  pigeonpea.json  potato.json  potato_nl.json  potatoes.json  rice.json  rice_eu.json  rice_irri.json  seed_onion.json  sorghum.json  (+16 more)
02_workflow_Bodium_OGS/results/: AdvectionDiffusionSorptionDecay_Subsurface.pvd  AdvectionDiffusionSorptionDecay_Subsurface_ts_0_t_0.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_100_t_8640000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_101_t_8726400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_102_t_8812800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_103_t_8899200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_104_t_8985600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_105_t_9072000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_106_t_9158400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_107_t_9244800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_108_t_9331200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_109_t_9417600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_10_t_864000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_110_t_9504000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_111_t_9590400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_112_t_9676800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_113_t_9763200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_114_t_9849600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_115_t_9936000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_116_t_10022400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_117_t_10108800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_118_t_10195200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_119_t_10281600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_11_t_950400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_120_t_10368000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_121_t_10454400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_122_t_10540800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_123_t_10627200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_124_t_10713600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_125_t_10800000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_126_t_10886400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_127_t_10972800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_128_t_11059200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_129_t_11145600.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_12_t_1036800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_130_t_11232000.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_131_t_11318400.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_132_t_11404800.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_133_t_11491200.000000.vtu  AdvectionDiffusionSorptionDecay_Subsurface_ts_134_t_11577600.000000.vtu  (+1424 more)
(+1097 files in other folders)
